--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,10 +9,10 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t demo-doc-repo .
-      - docker tag demo-doc-repo:latest 436174799454.dkr.ecr.us-east-1.amazonaws.com/demo-doc-repo:latest      
+      - docker build -t nginx_image_v2 .
+      - docker tag nginx_image_v2:latest public.ecr.aws/w7c1c9a7/ecr_doc_img_2:latest     
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 436174799454.dkr.ecr.us-east-1.amazonaws.com/demo-doc-repo:latest
+      - docker push public.ecr.aws/w7c1c9a7/ecr_doc_img_2:latest
